# mlops_group90

./: .coverage  .gcloudignore  .gitignore  README.md  cloudbuild.yaml  data.dvc  evaluate.dockerfile  my_logger.py  pokemon_to_int.pkl  profiling.py  pyproject.toml  rawdata.zip.dvc  requirements.txt  tasks.py  train.dockerfile  train2.dockerfile
.dvc/: config
.github/workflows/: tests.yaml
app/: backend.py  frontend.py  main.py  requirements_backend.txt  requirements_frontend.txt
configs/: config_cpu.yaml  sweep.yaml  vertex_ai_train.yaml
data/: processed.dvc
dockerfiles/: api.dockerfile  backend.dockerfile  frontend.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
reports/: README.md
src/: my_logger.py
src/pokemon_classification/: api.py  data.py  evaluate.py  model.py  train.py  visualize.py
src/pokemon_classification.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: locustfile.py  test_api.py  test_data.py  test_model.py
