[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pokemon_classification"
version = "0.0.1"
description = "A classification model for classifying pokemon"
authors = [
  { name = "group90", email = "your@email.com" },
]

keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ['requirements_dev.txt']}

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.ruff]
line-length = 120
lint = {select =["I"]}

[tool.coverage.run]
include=["src/*"]
omit = ["tests/*"]

[project.scripts]
train = "pokemon_classification.train:main"
evaluate = "pokemon_classification.evaluate:main"

[tool.poetry]
name = "mlops_group90"
version = "0.1.0"
packages = [{include = "pokemon_classification", from = "src"}]
